--- a/theme/default.css
+++ b/theme/default.css
@@ -95,6 +95,10 @@ button {
 .mb-10 {
     margin-bottom: 10px !important;
 }
+.mt-25{
+    margin-bottom: 25px !important;
+
+}
 
 .p-0 {
     padding: 0px !important;
