--- a/theme/default.css
+++ b/theme/default.css
@@ -95,6 +95,9 @@ button {
 .mb-10 {
     margin-bottom: 10px !important;
 }
+.mt-10 {
+    margin-top: 10px !important;
+}
 .mt-25{
     margin-top: 25px !important;
 
