add some colors

--- a/views/components/card/styles.scss
+++ b/views/components/card/styles.scss
@@ -1,5 +1,7 @@
+@import './theme/palette.scss';
+
 #card-componenet{
-    background: #fff;
+    background: $white-color;
     padding: 38px;
     padding-bottom: 23px;
 }
