--- a/views/components/related-view-card/styles.scss
+++ b/views/components/related-view-card/styles.scss
@@ -1,8 +1,10 @@
+@import './theme/palette.scss';
+
 #related-view-card-component{
     h2{
         margin: 0px;
     }
     padding: 26px;
-    background-color: #D9D9D9;
+    background-color: $gray-color;
     min-height: 50vh;
 }
