--- a/views/components/search-bar/styles.scss
+++ b/views/components/search-bar/styles.scss
@@ -1,5 +1,7 @@
+@import './theme/palette.scss';
+
 #search-bar-component {
-    background: #fff;
+    background: $white-color;
     padding: 35px 0px;
     .search-box-container {
         input {
@@ -16,38 +18,4 @@
         }
     }
 
-    .autocomplete {
-        position: relative;
-        display: inline-block;
-      }
-          
-      .autocomplete-items {
-        position: absolute;
-        border: 1px solid #d4d4d4;
-        border-bottom: none;
-        border-top: none;
-        z-index: 99;
-        /*position the autocomplete items to be the same width as the container:*/
-        top: 100%;
-        left: 0;
-        right: 0;
-      }
-      
-      .autocomplete-items div {
-        padding: 10px;
-        cursor: pointer;
-        background-color: #fff; 
-        border-bottom: 1px solid #d4d4d4; 
-      }
-      
-      /*when hovering an item:*/
-      .autocomplete-items div:hover {
-        background-color: #e9e9e9; 
-      }
-      
-      /*when navigating through the items using the arrow keys:*/
-      .autocomplete-active {
-        background-color: DodgerBlue !important; 
-        color: #ffffff; 
-      }
 }
